# llmnop

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  go.mod  go.sum  main.go
.agents/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
cmd/: benchmark.go  root.go  root_test.go
src/: args.rs  benchmark.rs  client.rs  main.rs  metrics.rs  output.rs  prompt.rs  self_update.rs  sonnet.rs  tokens.rs
src/client/: mod.rs
src/client/anthropic/: messages.rs
src/client/openai/: chat.rs  responses.rs
