[package]
name = "llmnop"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A command-line tool for benchmarking the performance of LLM inference endpoints."
license = "Apache-2.0"
homepage = "https://github.com/jpreagan/llmnop"
repository = "https://github.com/jpreagan/llmnop"
readme = "README.md"
keywords = ["llm", "benchmark", "performance", "openai", "inference"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["assets/*"]

[dependencies]
anyhow = "1.0.97"
async-openai = "0.29.0"
clap = { version = "4.5.34", features = ["derive"] }
futures = "0.3.31"
indicatif = "0.18.0"
rand = "0.9.0"
rand_distr = "0.5.1"
regex = "1.11.1"
sanitize-filename = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokenizers = { version = "0.21.0", features = ["http"] }
tokio = { version = "1.44.1", features = ["full"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
