[package]
name = "llmnop"
version = "0.8.0"
edition = "2024"
rust-version = "1.85"
description = "A command-line tool for benchmarking the performance of LLM inference endpoints."
license = "Apache-2.0"
homepage = "https://github.com/jpreagan/llmnop"
repository = "https://github.com/jpreagan/llmnop"
readme = "README.md"
keywords = ["llm", "benchmark", "performance", "openai", "inference"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["assets/*", ".claude/*", ".github/*", "AGENTS.md", "CLAUDE.md", "dist-workspace.toml"]

[dependencies]
anyhow = "1.0.97"
async-openai = { version = "0.33.0", features = ["byot", "chat-completion", "responses"] }
axoupdater = { version = "0.9.1", default-features = false, features = ["github_releases"], optional = true }
clap = { version = "4.5.34", features = ["derive"] }
futures = "0.3.31"
indicatif = "0.18.0"
rand = "0.10.0"
rand_distr = "0.6.0"
sanitize-filename = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokenizers = { version = "0.22.1", features = ["http", "rustls-tls"] }
tokio = { version = "1.44.1", features = ["full"] }
comfy-table = { version = "7", features = ["custom_styling"] }

[features]
self-update = ["dep:axoupdater"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
